# streamlens

./: .env  README.md
common/: pyproject.toml
common/streamlens_common/: __init__.py
common/streamlens_common/config/: settings.py
common/streamlens_common/constants/: enums.py
common/streamlens_common/kafka/: base_client.py
common/streamlens_common/logging/: logger.py
common/streamlens_common/models/: __init__.py  base_models.py
common/streamlens_common/utils/: exceptions.py  helpers.py
docs/: ingestion.md
infra/: docker-compose.yml
ingestion-service/: Dockerfile  README.md  pyproject.toml
ingestion-service/app/: .env  main.py
ingestion-service/app/api/: logs.py
ingestion-service/app/core/: config.py
ingestion-service/app/messaging/: __init__.py  factory.py
ingestion-service/app/messaging/base/: producer.py
ingestion-service/app/messaging/kafka/: kafka_consumer.py  kafka_producer.py
ingestion-service/app/models/: log_model.py
ingestion-service/app/queue/: __init__.py  in_memory_queue.py  redis_queue.py
ingestion-service/app/services/: buffer.py  ingestion_service.py  rate_limiter.py  storage_service.py
ingestion-service/app/services/processors/: __init__.py  base.py  factory.py
ingestion-service/app/services/processors/cloud/: __init__.py  base.py  cloud_processor.py
ingestion-service/app/services/processors/containers/: __init__.py  base.py  container_processor.py
ingestion-service/app/services/processors/custom/: __init__.py  base.py  custom_processor.py
ingestion-service/app/services/processors/integrations/: __init__.py  base.py  third_party_processor.py
ingestion-service/app/services/processors/iot/: __init__.py  base.py  iot_processor.py
ingestion-service/app/services/processors/networking/: __init__.py  base.py  network_processor.py
ingestion-service/app/services/processors/security/: __init__.py  base.py  security_processor.py
ingestion-service/app/services/processors/storage/: __init__.py  base.py  database_processor.py
ingestion-service/app/services/processors/system/: __init__.py  base.py  sys_log_processor.py
ingestion-service/app/services/processors/web/: __init__.py  base.py  web_processor.py
ingestion-service/app/services/processors1/: base.py  cloud_log_processor.py  container_processor.py  custom_processor.py  database_processor.py  iot_processor.py  log_processor.py  network_processor.py  security_processor.py  sys_log_processor.py  third_party_processor.py  web_server_processor.py
ingestion-service/app/storage/: base.py  clickhouse.py  factory.py  s3_parquet.py
ingestion-service/app/workers/: clickhouse_worker.py  kafka_worker.py  main.py
ingestion-service/tests/: .coverage  conftest.py
ingestion-service/tests/integration/: test_kafka_worker_flow.py
ingestion-service/tests/unit/: test_main.py
ingestion-service/tests/unit/api/: test_logs.py
ingestion-service/tests/unit/core/: test_config.py
ingestion-service/tests/unit/messaging/: test_factory.py  test_kafka_infrastructure.py
ingestion-service/tests/unit/models/: test_log_model.py
ingestion-service/tests/unit/queue/: test_redis.py
ingestion-service/tests/unit/services/: test_buffer.py  test_rate_limiter.py  test_storage_service.py
ingestion-service/tests/unit/services/processors/: test_containers.py  test_networking.py  test_processor_coverage.py
ingestion-service/tests/unit/storage/: test_clickhouse.py
ingestion-service/tests/unit/workers/: test_clickhouse_worker.py  test_kafka_worker.py  test_main_coverage.py
processing-service/: README.md  pyproject.toml
processing-service/app/: main.py
processing-service/app/consumers/: kafka_consumer.py
processing-service/app/dlq/: dlq_producer.py
processing-service/app/enrichment/: enricher.py
processing-service/app/indexer/: es_indexer.py
processing-service/app/kafka/: client.py  schema_registry.py
processing-service/app/metrics/: prometheus_metrics.py
processing-service/app/parser/: json_parser.py
processing-service/app/pipeline/: log_pipeline.py
processing-service/app/schema/: normalizer.py
processing-service/app/tracing/: tracer.py
(+4 files in other folders)
