[tool.poetry]
name = "streamlens-ingestion"
version = "0.1.0"
description = "StreamLens ingestion service"
authors = ["Khushal Singh <you@example.com>"]
license = "MIT"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111"
uvicorn = "^0.25"
aiokafka = "^0.13"
pydantic = "^2.2"
redis = "^7.0"
python-snappy = "^0.7.3"

[tool.poetry.dev-dependencies]
pytest = "^8.2"
httpx = "^0.27"

[tool.poetry.scripts]
start-ingestion = "app.workers.kafka_worker:main"   # if you have a main() function