[tool.poetry]
name = "streamlens-ingestion"
version = "0.1.0"
description = "StreamLens ingestion service"
authors = ["Khushal Singh <you@example.com>"]
license = "MIT"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111"
uvicorn = "^0.25"
aiokafka = "^0.13"
pydantic = "^2.2"
redis = "^5.0.4"
python-snappy = "^0.7.3"
orjson = "^3.10.1"        # 🔥 Added for high-speed JSON & datetime support
hiredis = "^2.3.2"       # 🔥 Added to make Redis Batching much faster
clickhouse-connect = "^0.7.8" # 🔥 Added for the ClickHouse storage layer
aioredis = "^2.0.1"
pydantic-settings = "^2.13.1"
streamlens-common = {path = "../common", develop = true}
pandas = "^3.0.2"
pyarrow = "^23.0.1"
pytest-cov = "^7.1.0"
pytest-asyncio = "^1.3.0"


[tool.poetry.dev-dependencies]
pytest = "^8.2"
httpx = "^0.27"

[tool.poetry.scripts]
start-ingestion = "app.workers.kafka_worker:main"   # if you have a main() function