[tool.poetry]
name = "streamlens-ingestion"
version = "0.1.0"
description = "StreamLens ingestion service"
authors = ["Khushal Singh <you@example.com>"]
license = "MIT"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111"
uvicorn = "^0.25"
aiokafka = "^0.13"
pydantic = "^2.2"
redis = "^5.0.4"
python-snappy = "^0.7.3"
orjson = "^3.10.1"
hiredis = "^2.3.2"
clickhouse-connect = "^0.7.8"
aioredis = "^2.0.1"
pydantic-settings = "^2.13.1"
streamlens-common = {path = "../common", develop = true}
pandas = "^3.0.2"
pyarrow = "^23.0.1"

# --- NEW DEV GROUP (Fixes the deprecation warning) ---
[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
httpx = "^0.27"
flake8 = "^7.0.0"          # 🔥 Added this to fix the CI error
pytest-cov = "^5.0.0"      # Moved from main dependencies
pytest-asyncio = "^0.23.0" # Moved from main dependencies

[tool.poetry.scripts]
start-ingestion = "app.workers.kafka_worker:main"